第二次提交

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>选择操作</title>
 </head>
 <body>
 <button><a href="/setScore/">设置分数</a></button>
