--- a/templates/setScore.html
+++ b/templates/setScore.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>设置分数</title>
 </head>
 <body>
 <form action="/setScore/" method="post">
